--- a/optimal_agenda.ipynb
+++ b/optimal_agenda.ipynb
@@ -2618,7 +2618,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base_machine_learning",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2632,7 +2632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
