--- a/optimal_agenda_2.ipynb
+++ b/optimal_agenda_2.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dianepaul/opt/anaconda3/lib/python3.8/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
@@ -2702,7 +2711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2717,7 +2726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2730,7 +2739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2747,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2778,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2787,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2796,7 +2805,7 @@
        "6"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2809,17 +2818,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SetAllowedVehiclesForIndex"
+    "import numpy as np\n",
+    "\n",
+    "# Extract unique client IDs\n",
+    "unique_client_ids = sorted(c_n_dist['ID Client'].unique())\n",
+    "\n",
+    "# Extract unique intervenant IDs\n",
+    "unique_intervenant_ids = sorted(set(col.split('_')[2] for col in c_n_dist.columns if 'Intervenant' in col))\n",
+    "\n",
+    "# Select only the duration columns\n",
+    "duration_cols = [col for col in c_n_dist.columns if 'Duration' in col]\n",
+    "\n",
+    "# Convert duration columns to float\n",
+    "c_n_dist[duration_cols] = c_n_dist[duration_cols].applymap(convert_duration)\n",
+    "\n",
+    "# Function to create symmetric matrix\n",
+    "def create_matrix(df, unique_client_ids, unique_intervenant_ids, vehicle_type):\n",
+    "    n_client = len(unique_client_ids)\n",
+    "    n_intervenant = len(unique_intervenant_ids)\n",
+    "    matrix = np.zeros((n_client, n_intervenant))\n",
+    "    for i, client_id in enumerate(unique_client_ids):\n",
+    "        for j, intervenant_id in enumerate(unique_intervenant_ids):\n",
+    "            try:\n",
+    "                duration_col = f'Duration_Intervenant_{intervenant_id}_{vehicle_type}'\n",
+    "                duration = int(df.loc[df['ID Client'] == client_id, duration_col])\n",
+    "                matrix[i][j] = duration\n",
+    "            except ValueError:\n",
+    "                # If duration is not available, assign a default value or handle as needed\n",
+    "                pass\n",
+    "    return matrix\n",
+    "\n",
+    "# Create matrix for driving\n",
+    "matrix_driving = create_matrix(c_n_dist, unique_client_ids, unique_intervenant_ids, 'Driving')\n",
+    "\n",
+    "# Create symmetric matrix for bicycling\n",
+    "matrix_bicycling = create_matrix(c_n_dist, unique_client_ids, unique_intervenant_ids, 'Bicycling')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base_machine_learning",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2833,7 +2883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
