next tasks at end of notebook

--- a/part2.ipynb
+++ b/part2.ipynb
@@ -1772,6 +1772,49 @@
    "source": [
     "plot_density_df(fractions_df_caen, age_groups, custom_labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a plot by grouping the calvados, manche, orne arrondissments\n",
+    "# 4 arrondissements dans le département du Calvados\n",
+    "# Bayeux (141)\n",
+    "# Caen (142)\n",
+    "# Lisieux (143)\n",
+    "# Vire (144)\n",
+    "\n",
+    "# 4 arrondissements dans le département de la Manche\n",
+    "# Avranches (501)\n",
+    "# Cherbourg (502)\n",
+    "# Coutances (503)\n",
+    "# Saint-Lô (504)\n",
+    "\n",
+    "# 3 arrondissements dans le département de l'Orne\n",
+    "# Alençon (611)\n",
+    "# Argentan (612)\n",
+    "# Mortagne-au-Perche (613)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a plot that shows old people density for calvados, manche, and orne\n",
+    "# create subplot for each of the 3 departments (by arrondissement)\n",
+    "# optimization to find canton(s) with the most old people (let's try top 15 and bottom 5) for comparison sake"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
