bar plot with different regions

--- a/part2.ipynb
+++ b/part2.ipynb
@@ -1811,6 +1811,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CODGEO', 'P20_POP', 'P20_POP0014', 'P20_POP1529', 'P20_POP3044',\n",
+       "       'P20_POP4559', 'P20_POP6074', 'P20_POP7589', 'P20_POP90P', 'P20_POPH',\n",
+       "       ...\n",
+       "       'AJCS24', 'AJCSUH24', 'AJCSLIT24', 'fraction_P20_POP0014',\n",
+       "       'fraction_P20_POP1529', 'fraction_P20_POP3044', 'fraction_P20_POP4559',\n",
+       "       'fraction_P20_POP6074', 'fraction_P20_POP7589', 'fraction_P20_POP90P'],\n",
+       "      dtype='object', length=1890)"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
