Corrected added inter and clients

--- a/optimal_agenda_2.ipynb
+++ b/optimal_agenda_2.ipynb
@@ -16082,7 +16082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16160,8 +16160,18 @@
     "                                [\n",
     "                                    client_loc_1[0],\n",
     "                                    client_loc_1[1],\n",
-    "                                    inter_synthetic_locations[j - nb_og_clients][0],\n",
-    "                                    inter_synthetic_locations[j - nb_og_clients][1],\n",
+    "                                    inter_synthetic_locations[\n",
+    "                                        j\n",
+    "                                        - nb_og_clients\n",
+    "                                        - nb_synth_clients\n",
+    "                                        - nb_og_inter\n",
+    "                                    ][0],\n",
+    "                                    inter_synthetic_locations[\n",
+    "                                        j\n",
+    "                                        - nb_og_clients\n",
+    "                                        - nb_synth_clients\n",
+    "                                        - nb_og_inter\n",
+    "                                    ][1],\n",
     "                                ]\n",
     "                            ]\n",
     "                        )[0]\n",
@@ -16346,26 +16356,26 @@
     "                        ]\n",
     "                    )[0]\n",
     "                )\n",
-    "            new_bike_matrix[i][j] = round(\n",
-    "                bike_time_travel_estimator.predict(\n",
-    "                    [\n",
+    "                new_bike_matrix[i][j] = round(\n",
+    "                    bike_time_travel_estimator.predict(\n",
     "                        [\n",
-    "                            inter_synthetic_locations[\n",
-    "                                i - nb_og_inter - nb_synth_clients - nb_og_inter\n",
-    "                            ][0],\n",
-    "                            inter_synthetic_locations[\n",
-    "                                i - nb_og_inter - nb_synth_clients - nb_og_inter\n",
-    "                            ][1],\n",
-    "                            inter_synthetic_locations[\n",
-    "                                j - nb_og_inter - nb_synth_clients - nb_og_inter\n",
-    "                            ][0],\n",
-    "                            inter_synthetic_locations[\n",
-    "                                j - nb_og_inter - nb_synth_clients - nb_og_inter\n",
-    "                            ][1],\n",
+    "                            [\n",
+    "                                inter_synthetic_locations[\n",
+    "                                    i - nb_og_inter - nb_synth_clients - nb_og_inter\n",
+    "                                ][0],\n",
+    "                                inter_synthetic_locations[\n",
+    "                                    i - nb_og_inter - nb_synth_clients - nb_og_inter\n",
+    "                                ][1],\n",
+    "                                inter_synthetic_locations[\n",
+    "                                    j - nb_og_inter - nb_synth_clients - nb_og_inter\n",
+    "                                ][0],\n",
+    "                                inter_synthetic_locations[\n",
+    "                                    j - nb_og_inter - nb_synth_clients - nb_og_inter\n",
+    "                                ][1],\n",
+    "                            ]\n",
     "                        ]\n",
-    "                    ]\n",
-    "                )[0]\n",
-    "            )\n",
+    "                    )[0]\n",
+    "                )\n",
     "\n",
     "            new_car_matrix[j][i] = new_car_matrix[i][j]\n",
     "            new_bike_matrix[j][i] = new_bike_matrix[i][j]\n",
@@ -16379,7 +16389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16392,7 +16402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16411,9 +16421,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[263], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m new_car_matrix, new_bike_matrix \u001b[38;5;241m=\u001b[39m add_clients_and_inter_in_time_matrix(\n\u001b[1;32m      2\u001b[0m     client_synthetic_locations,\n\u001b[1;32m      3\u001b[0m     inter_synthetic_locations,\n\u001b[1;32m      4\u001b[0m     full_time_matrix_car,\n\u001b[1;32m      5\u001b[0m     full_time_matrix_bike,\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;241m115\u001b[39m,\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;241m24\u001b[39m,\n\u001b[1;32m      8\u001b[0m )\n",
+      "Cell \u001b[0;32mIn[260], line 75\u001b[0m, in \u001b[0;36madd_clients_and_inter_in_time_matrix\u001b[0;34m(client_synthetic_locations, inter_synthetic_locations, full_time_matrix_car, full_time_matrix_bike, nb_og_clients, nb_og_inter)\u001b[0m\n\u001b[1;32m     67\u001b[0m         client_id_1 \u001b[38;5;241m=\u001b[39m client_idx_to_id[i]\n\u001b[1;32m     68\u001b[0m         client_loc_1 \u001b[38;5;241m=\u001b[39m client_id_to_location[client_id_1]\n\u001b[1;32m     69\u001b[0m         new_car_matrix[i][j] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m(\n\u001b[1;32m     70\u001b[0m             car_time_travel_estimator\u001b[38;5;241m.\u001b[39mpredict(\n\u001b[1;32m     71\u001b[0m                 [\n\u001b[1;32m     72\u001b[0m                     [\n\u001b[1;32m     73\u001b[0m                         client_loc_1[\u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m     74\u001b[0m                         client_loc_1[\u001b[38;5;241m1\u001b[39m],\n\u001b[0;32m---> 75\u001b[0m                         inter_synthetic_locations[j \u001b[38;5;241m-\u001b[39m nb_og_clients][\u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m     76\u001b[0m                         inter_synthetic_locations[j \u001b[38;5;241m-\u001b[39m nb_og_clients][\u001b[38;5;241m1\u001b[39m],\n\u001b[1;32m     77\u001b[0m                     ]\n\u001b[1;32m     78\u001b[0m                 ]\n\u001b[1;32m     79\u001b[0m             )[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     80\u001b[0m         )\n\u001b[1;32m     81\u001b[0m         new_bike_matrix[i][j] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m(\n\u001b[1;32m     82\u001b[0m             bike_time_travel_estimator\u001b[38;5;241m.\u001b[39mpredict(\n\u001b[1;32m     83\u001b[0m                 [\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    101\u001b[0m             )[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m    102\u001b[0m         )\n\u001b[1;32m    103\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m nb_og_clients \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m i \u001b[38;5;241m<\u001b[39m nb_og_clients \u001b[38;5;241m+\u001b[39m nb_synth_clients:\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "new_car_matrix, new_bike_matrix = add_clients_and_inter_in_time_matrix(\n",
     "    client_synthetic_locations,\n",
@@ -16424,6 +16447,13 @@
     "    24,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
