--- a/optimal_agenda_2.ipynb
+++ b/optimal_agenda_2.ipynb
@@ -17493,7 +17493,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7.\n"
+    "# 7. Running scenarios\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7.1. Adding synthetic clients\n"
    ]
   },
   {
