--- a/dv.ipynb
+++ b/dv.ipynb
@@ -777,6 +777,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Saint-Lô', 'Évreux', 'Bayeux', 'Caen', 'Deauville', 'Louviers',\n",
+       "       'Le Havre', 'Rouen', 'Froberville', 'Cherbourg-en-Cotentin',\n",
+       "       'Mondeville', 'Lisieux', 'Hérouville-Saint-Clair', 'Pont-Audemer',\n",
+       "       'Carentan-les-Marais', 'La Haye-du-Puits', 'Granville', 'Valognes',\n",
+       "       'Villedieu-les-Poêles', 'Avranches', 'Agon-Coutainville', 'Messei',\n",
+       "       'Mortagne-au-Perche', 'Le Mesnil-Esnard', 'Saint-Contest',\n",
+       "       'Mont-Saint-Aignan', 'Damigny', 'Tilly-sur-Seulles',\n",
+       "       'Bois-Guillaume', 'Orbec', 'Saint-Léger-du-Bourg-Denis', \"L'Aigle\",\n",
+       "       'Dorceau', 'Saint-Sever-Calvados', 'Vassy', 'Maromme', 'Flers',\n",
+       "       'Aumale', 'Coutances', 'Oissel', 'Elbeuf', 'Sées',\n",
+       "       'Le Petit-Quevilly', 'Villers-Bocage', 'Boisney', 'Marbois',\n",
+       "       'Alençon', 'Pavilly', 'Bourg-Achard', 'Vimoutiers', 'Bolbec',\n",
+       "       'Gasny', 'Colombelles', 'Eu', 'Domfront', 'Nolléval',\n",
+       "       'Val-de-Reuil', 'Saint-Romain-de-Colbosc', 'Dieppe',\n",
+       "       'Cherbourg-Octeville', 'Tinchebray-Bocage', 'Vire Normandie',\n",
+       "       'Carrouges', 'Doudeville', 'Le Merlerault', 'Dozulé',\n",
+       "       'Saint-Bômer-les-Forges', 'Sotteville-lès-Rouen', 'Saint-Saëns',\n",
+       "       'Yerville', 'Val-au-Perche', 'Saint-Hilaire-du-Harcouët',\n",
+       "       'Bretteville-sur-Odon', 'La Ferté-Macé', 'Fécamp',\n",
+       "       'Saint-Ouen-du-Tilleul', 'Douvres-la-Délivrande', 'Ézy-sur-Eure',\n",
+       "       'Le Mêle-sur-Sarthe', 'Bazoches-sur-Hoëne', 'Juvigny-sous-Andaine',\n",
+       "       'Trouville-sur-Mer', 'Montville', 'Étainhus',\n",
+       "       \"Criquetot-l'Esneval\", 'Aubevoye', 'Briouze', 'Argentan',\n",
+       "       'Port-Jérôme-sur-Seine', 'Carpiquet', 'Gaillon', 'Gisors',\n",
+       "       'Cabourg', 'Moulins-la-Marche', 'Écouché', 'Yvetot',\n",
+       "       'La Vieille-Lyre', 'Berneval-le-Grand', 'Ifs',\n",
+       "       'La Ferrière-aux-Étangs', 'Fleury-sur-Andelle',\n",
+       "       'Saint-Vaast-la-Hougue', 'Écouis'], dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_addresses.Commune.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -809,6 +856,132 @@
    ],
    "source": [
     "df_addresses['Postal Code'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_addresses['Postal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Commune</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50000</td>\n",
+       "      <td>Saint-Lô</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>27000</td>\n",
+       "      <td>Évreux</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14400</td>\n",
+       "      <td>Bayeux</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14000</td>\n",
+       "      <td>Caen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14800</td>\n",
+       "      <td>Deauville</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>76610</td>\n",
+       "      <td>Le Havre</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>27001</td>\n",
+       "      <td>Évreux</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>50550</td>\n",
+       "      <td>Saint-Vaast-la-Hougue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>76230</td>\n",
+       "      <td>Bois-Guillaume</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>27440</td>\n",
+       "      <td>Écouis</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>289 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Postal Code                Commune\n",
+       "0         50000               Saint-Lô\n",
+       "1         27000                 Évreux\n",
+       "2         14400                 Bayeux\n",
+       "3         14000                   Caen\n",
+       "4         14800              Deauville\n",
+       "..          ...                    ...\n",
+       "284       76610               Le Havre\n",
+       "285       27001                 Évreux\n",
+       "286       50550  Saint-Vaast-la-Hougue\n",
+       "287       76230         Bois-Guillaume\n",
+       "288       27440                 Écouis\n",
+       "\n",
+       "[289 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_addresses"
    ]
   },
   {
